--- a/CSS Files/MenuStyle.css
+++ b/CSS Files/MenuStyle.css
@@ -152,7 +152,6 @@
     width: 600px;
 }
 
-
 ul {
     list-style-type: none;
     padding: 0;
@@ -160,13 +159,50 @@ ul {
 
 li {
     display: grid;
-    place-items: center; /* Center content both horizontally and vertically */
+    place-items: center;
     padding: 10px;
     background-color: #464444;
     border-radius: 25px;
     margin-bottom: 10px;
     opacity: 0;
     animation: fadeIn 0.5s forwards;
+    overflow: hidden;
+    position: relative;
+}
+
+li:hover::before {
+    content: "";
+    width: 75px;
+    height: 625px;
+    position: absolute;
+    background: white;
+
+    animation: animate 4s linear infinite;
+}
+
+li::after {
+    content: "";
+    inset: 4px;
+    position: absolute;
+    background: #464444;
+    border-radius: 20px;
+}
+
+li img,
+li span,
+li button {
+    position: relative; /* Ensure z-index works */
+    z-index: 2; /* Raise z-index above the overlay */
+}
+
+@keyframes animate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 @keyframes fadeIn {
@@ -177,6 +213,34 @@ li {
     to {
         opacity: 1;
     }
+}
+
+li:nth-child(1) {
+    animation-delay: 0.1s;
+}
+
+li:nth-child(2) {
+    animation-delay: 0.4s;
+}
+
+li:nth-child(3) {
+    animation-delay: 0.3s;
+}
+
+li:nth-child(4) {
+    animation-delay: 0.4s;
+}
+
+li:nth-child(5) {
+    animation-delay: 0.2s;
+}
+
+li:nth-child(6) {
+    animation-delay: 0.6s;
+}
+
+li.cart-item{
+    justify-content: center;
 }
 
 .menu-item-img {
