--- a/CSS Files/MenuStyle.css
+++ b/CSS Files/MenuStyle.css
@@ -182,7 +182,7 @@ li:hover::before {
 
 li::after {
     content: "";
-    inset: 4px;
+    inset: 5px;
     position: absolute;
     background: #464444;
     border-radius: 20px;
@@ -191,8 +191,8 @@ li::after {
 li img,
 li span,
 li button {
-    position: relative; /* Ensure z-index works */
-    z-index: 2; /* Raise z-index above the overlay */
+    position: relative;
+    z-index: 2;
 }
 
 @keyframes animate {
@@ -237,10 +237,6 @@ li:nth-child(5) {
 
 li:nth-child(6) {
     animation-delay: 0.6s;
-}
-
-li.cart-item{
-    justify-content: center;
 }
 
 .menu-item-img {
